fix: adjust footer spacing for desktop and mobile

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -713,6 +713,14 @@ video {
   top: 0.5rem;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -723,6 +731,34 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .block {
@@ -761,8 +797,28 @@ video {
   height: 100vh;
 }
 
+.h-\[calc\(100vh-64px\)\] {
+  height: calc(100vh - 64px);
+}
+
+.h-\[calc\(100vh-40px\)\] {
+  height: calc(100vh - 40px);
+}
+
 .max-h-\[50vh\] {
   max-height: 50vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.min-h-\[15\%\] {
+  min-height: 15%;
+}
+
+.min-h-\[28\%\] {
+  min-height: 28%;
 }
 
 .w-1\/4 {
@@ -850,6 +906,10 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-visible {
   overflow: visible;
 }
@@ -876,6 +936,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-cat-fg-light {
@@ -960,6 +1024,30 @@ video {
   padding-bottom: 4rem;
 }
 
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -982,6 +1070,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .leading-none {
   line-height: 1;
 }
@@ -999,6 +1092,11 @@ video {
 .text-cat-peach-light {
   --tw-text-opacity: 1;
   color: rgb(254 100 11 / var(--tw-text-opacity, 1));
+}
+
+.text-cat-peach-dark {
+  --tw-text-opacity: 1;
+  color: rgb(250 179 135 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1032,6 +1130,11 @@ video {
 
 .hover\:bg-cat-fg-light\/10:hover {
   background-color: rgb(76 79 105 / 0.1);
+}
+
+.hover\:text-cat-peach-light:hover {
+  --tw-text-opacity: 1;
+  color: rgb(254 100 11 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
@@ -1084,9 +1187,18 @@ video {
   background-color: rgb(205 214 244 / 0.1);
 }
 
+.dark\:hover\:text-cat-peach-dark:hover:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(250 179 135 / var(--tw-text-opacity, 1));
+}
+
 @media (min-width: 768px) {
   .md\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:flex {
@@ -1116,5 +1228,9 @@ video {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:pb-8 {
+    padding-bottom: 2rem;
   }
 }
